@@ -1,3 +1,8 @@
+2008-07-22  Stephen Eglen  <stephen@gnu.org>
+
+	* iswitchb.el (iswitchb-delim): New variable, suggested by Ted
+	Roden.
+
 2008-07-22  Sven Joachim <svenjoac@gmx.de>  (tiny change)
 
 	* vc-dir.el (vc-dir-recompute-file-state): Fix mismatched
